--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -11,7 +11,7 @@ on:
         - '!main'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,28 +22,6 @@ jobs:
 
       - name: Install, build, and upload your site
         uses: withastro/action@v0
-
-      - name: Cache build save
-        uses: actions/cache/save@v3
-        with:
-          path: dist
-          key: ${{ runner.os }}-build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout your repository
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref_name }}
-
-      - name: Cache build restore
-        uses: actions/cache/restore@v3
-        with:
-          path: dist
-          key: ${{ runner.os }}-build
 
       - name: Deploy to Firebase
         id: deploy
@@ -57,25 +35,25 @@ jobs:
     outputs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
 
-  analysis:
-    if: ${{ github.ref_name == 'dev' }}
+  # analysis:
+  #   if: ${{ github.ref_name == 'dev' }}
 
-    runs-on: ubuntu-latest
-    needs: deploy
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-deploy
 
-    steps:
-      - name: Checkout your repository
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref_name }}
+  #   steps:
+  #     - name: Checkout your repository
+  #       uses: actions/checkout@v3
+  #       with:
+  #         ref: ${{ github.ref_name }}
 
-      - name: Checkout the Lighthouse repository
-        uses: actions/checkout@v3
-        with:
-          repository: 'myactionway/lighthouse-badges'
-          path: temp_lighthouse_badges_nested
+  #     - name: Checkout the Lighthouse repository
+  #       uses: actions/checkout@v3
+  #       with:
+  #         repository: 'myactionway/lighthouse-badges'
+  #         path: temp_lighthouse_badges_nested
 
-      - name: Analyze and generate badge
-        uses: myactionway/lighthouse-badger-action@v2.2
-        with:
-          urls: ${{ needs.deploy.outputs.url }}
+  #     - name: Analyze and generate badge
+  #       uses: myactionway/lighthouse-badger-action@v2.2
+  #       with:
+  #         urls: ${{ needs.deploy.outputs.url }}
