--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -2,13 +2,9 @@ name: Deploy to Firebase
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [main, dev]
   pull_request:
-      branches:
-        - '*'
-        - '!main'
+    branches: ['*']
 
 jobs:
   build-and-deploy:
