--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
 
       - run: |
-          echo $$ {{ github.event.inputs.user_name }}
-          echo $$ {{ github.event.inputs.user_email }}
-          echo $$ {{ env.USER_NAME }}
-          echo $$ {{ env.USER_EMAIL }}
+          echo ${{ github.event.inputs.user_name }}
+          echo ${{ github.event.inputs.user_email }}
+          echo ${{ env.USER_NAME }}
+          echo ${{ env.USER_EMAIL }}
 
       - name: Checkout your repository
         uses: actions/checkout@v3
@@ -41,6 +41,6 @@ jobs:
         uses: myactionway/lighthouse-badger-action@v2.2
         with:
           urls: ${{ inputs.url }}
-          user_name: $$ {{ github.event.inputs.user_name }}
-          user_email: $$ {{ github.event.inputs.user_email }}
+          user_name: ${{ github.event.inputs.user_name }}
+          user_email: ${{ github.event.inputs.user_email }}
           commit_message: ${{ github.event.inputs.commit_message }}
