--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
 
       - run: |
+          echo ${{ github.actor }}
           echo ${{ github.event.inputs.user_name }}
           echo ${{ github.event.inputs.user_email }}
           echo ${{ env.USER_NAME }}
@@ -41,6 +42,5 @@ jobs:
         uses: myactionway/lighthouse-badger-action@v2.2
         with:
           urls: ${{ inputs.url }}
-          user_name: ${{ github.event.inputs.user_name }}
-          user_email: ${{ github.event.inputs.user_email }}
+          user_name: ${{ github.actor }}
           commit_message: ${{ github.event.inputs.commit_message }}
