--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -24,3 +23,6 @@ pnpm-lock.yaml
 
 #watch-sass folder (VS Code)
 .watch
+
+# firebase cache
+.firebase/*.cache
