--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,17 @@
 {
 	"hosting": {
 		"public": "dist",
-		"ignore": []
+		"ignore": [],
+		"headers": [
+			{
+			  "source": "/**",
+			  "headers": [
+				{
+				  "key": "Cache-Control",
+				  "value": "max-age=31536000"
+				}
+			  ]
+			}
+		]
 	}
 }
