--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/three": "^0.146.0",
 		"astro": "^1.6.8",
 		"astro-icon": "^0.8.0",
+		"astro-netlify-cms": "^0.5.2",
 		"firebase": "^9.14.0",
 		"flowbite-react": "^0.3.7",
 		"framer-motion": "^7.6.7",
@@ -40,6 +41,7 @@
 		"lighthouse": "^9.6.8",
 		"limax": "^3.0.0",
 		"lorem-ipsum": "^2.0.8",
+		"netlify-cms-app": "^2.15.72",
 		"postcss-import": "^15.0.0",
 		"postcss-nesting": "^10.2.0",
 		"postcss-scss": "^4.0.6",
