--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "@spacewizard/site",
 	"type": "module",
 	"exports": "./index.js",
-	"node": ">=14.16",
-	"version": "0.0.1",
+	"node": ">=16.12.0",
+	"version": "0.9",
 	"private": true,
 	"scripts": {
 		"dev": "astro dev",
@@ -13,60 +13,55 @@
 		"lint": "stylelint \"**/*.{css,scss,sass}\""
 	},
 	"dependencies": {
-		"@astrojs/image": "^0.11.4",
-		"@astrojs/mdx": "^0.11.6",
-		"@astrojs/partytown": "^1.0.1",
-		"@astrojs/react": "^1.2.2",
+		"@astrojs/mdx": "^0.15.0",
+		"@astrojs/partytown": "^1.0.3",
+		"@astrojs/react": "^2.0.0",
 		"@astrojs/sitemap": "^1.0.0",
-		"@astrojs/tailwind": "^2.1.2",
-		"@astrolib/analytics": "^0.2.4",
-		"@astrolib/seo": "^0.2.1",
+		"@astrojs/tailwind": "^3.0.0",
+		"@astrolib/analytics": "^0.3.0",
+		"@astrolib/seo": "^0.3.0",
 		"@fontsource/roboto": "^4.5.8",
-		"@react-three/drei": "^9.40.0",
-		"@react-three/fiber": "^8.9.1",
+		"@react-three/drei": "^9.56.2",
+		"@react-three/fiber": "^8.10.1",
 		"@react-three/postprocessing": "^2.7.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.8",
-		"@types/react": "^18.0.25",
-		"@types/three": "^0.146.0",
-		"astro": "^1.6.8",
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/react": "^18.0.27",
+		"@types/three": "^0.148.1",
+		"astro": "^2.0.1",
 		"astro-icon": "^0.8.0",
-		"firebase": "^9.14.0",
-		"flowbite-react": "^0.3.7",
-		"framer-motion": "^7.6.7",
-		"framer-motion-3d": "^7.6.7",
-		"lighthouse": "^9.6.8",
-		"limax": "^3.0.0",
-		"lorem-ipsum": "^2.0.8",
-		"postcss-import": "^15.0.0",
-		"postcss-nesting": "^10.2.0",
+		"firebase": "^9.16.0",
+		"flowbite-react": "^0.3.8",
+		"framer-motion": "^8.5.3",
+		"framer-motion-3d": "^8.5.3",
+		"postcss-import": "^15.1.0",
+		"postcss-nesting": "^11.0.0",
 		"postcss-scss": "^4.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-merge-refs": "^2.0.1",
-		"react-simply-carousel": "^8.4.1",
-		"sass": "^1.56.1",
+		"react-simply-carousel": "^8.4.2",
+		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
-		"three": "^0.146.0",
+		"three": "^0.148.0",
 		"upgrade": "^1.1.0",
-		"vite": "^3.2.4",
-		"wavy-svg": "^1.1.2"
+		"vite": "^4.0.4"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-legacy": "^2.3.1",
+		"@vitejs/plugin-legacy": "^3.0.2",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.27.0",
-		"eslint-plugin-astro": "^0.21.0",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"firebase-tools": "^11.16.1",
+		"eslint": "^8.32.0",
+		"eslint-plugin-astro": "^0.23.0",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"firebase-tools": "^11.21.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^6.1.0",
 		"stylelint-scss": "^4.3.0",
-		"terser": "^5.15.1"
+		"terser": "^5.16.1"
 	}
 }
