--- a/firebase.json
+++ b/firebase.json
@@ -8,8 +8,9 @@
 			  "headers": [
 				{
 				  "key": "Cache-Control",
-				  "value": "max-age=31536000"
-				}
+				  "value": "public, max-age=300, s-maxage=600"
+				},
+				{}
 			  ]
 			}
 		]
