--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install, build, and upload your site
         uses: withastro/action@v0
+        with:
+          package-manager: npm
 
       - name: Deploy to Firebase
         id: deploy
