--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@spacewizard/site",
+	"name": "sw-site",
 	"type": "module",
 	"exports": "./index.js",
-	"node": ">=16.12.0",
-	"version": "0.9",
+	"node": ">=23",
+	"version": "19",
 	"private": true,
 	"scripts": {
 		"dev": "astro dev",
@@ -13,64 +13,39 @@
 		"lint": "stylelint \"**/*.{css,scss,sass}\""
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^0.19.7",
-		"@astrojs/partytown": "^1.2.3",
-		"@astrojs/react": "^2.2.1",
-		"@astrojs/sitemap": "^1.3.3",
-		"@astrojs/tailwind": "^4.0.0",
-		"@astrolib/analytics": "^0.3.0",
-		"@astrolib/seo": "^0.4.0",
-		"@fontsource/roboto": "^5.0.3",
-		"@headlessui/react": "^1.7.15",
-		"@react-three/drei": "^9.77.3",
-		"@react-three/fiber": "^8.13.3",
-		"@react-three/postprocessing": "^2.14.11",
+		"@astrojs/mdx": "^4.2.3",
+		"@astrojs/partytown": "^2.1.4",
+		"@astrojs/react": "^4.2.3",
+		"@astrojs/sitemap": "^3.3.0",
+		"@fontsource/roboto": "^5.2.5",
+		"@react-three/drei": "^10.0.6",
+		"@react-three/fiber": "^9.1.2",
+		"@react-three/postprocessing": "^3.0.4",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tailwindcss/typography": "^0.5.9",
-		"@types/react": "^18.2.14",
-		"@types/three": "^0.152.1",
-		"astro": "^2.7.0",
-		"astro-icon": "^0.8.1",
-		"firebase": "^9.23.0",
-		"flowbite-react": "^0.4.9",
-		"framer-motion": "^10.12.17",
-		"framer-motion-3d": "^10.12.16",
-		"netlify-cms-app": "^2.15.72",
-		"postcss-import": "^15.1.0",
-		"postcss-nesting": "^11.3.0",
-		"postcss-scss": "^4.0.6",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-merge-refs": "^2.0.2",
-		"react-simply-carousel": "^9.0.3",
-		"sass": "^1.63.6",
-		"tailwindcss": "^3.3.2",
-		"three": "^0.153.0",
-		"upgrade": "^1.1.0",
-		"vite": "^4.3.9"
+		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.3",
+		"@types/react": "^19.1.0",
+		"@types/three": "^0.175.0",
+		"astro": "^5.6.1",
+		"astro-icon": "^1.1.5",
+		"motion": "^12.6.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwindcss": "^4.1.3",
+		"three": "^0.175.0",
+		"vite": "^6.2.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-legacy": "^4.0.5",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.43.0",
-		"eslint-plugin-astro": "^0.27.2",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"firebase-tools": "^12.4.0",
-		"lighthouse": "^10.3.0",
-		"stylelint": "^15.9.0",
-		"stylelint-config-recommended-scss": "^12.0.0",
-		"stylelint-config-standard": "^33.0.0",
-		"stylelint-config-standard-scss": "^9.0.0",
-		"stylelint-scss": "^5.0.1",
-		"terser": "^5.18.1"
-	},
-	"overrides": {
-		"netlify-cms-app": {
-			"react": "^18.2.0",
-			"react-dom": "^18.2.0",
-			"@types/react": "^18.0.25"
-		}
+		"eslint": "^9.24.0",
+		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"lighthouse": "^12.5.1",
+		"stylelint": "^16.18.0",
+		"stylelint-config-recommended-scss": "^14.1.0",
+		"stylelint-config-standard": "^38.0.0",
+		"stylelint-config-standard-scss": "^14.0.0",
+		"stylelint-scss": "^6.11.1"
 	}
 }
