--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
-	"recommendations": ["astro-build.astro-vscode", "glenn2223.live-sass", "stylelint.vscode-stylelint"],
+	"recommendations": [
+		"astro-build.astro-vscode",
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode"
+	],
 	"unwantedRecommendations": []
 }
