--- a/apps/site/tsconfig.json
+++ b/apps/site/tsconfig.json
@@ -1,53 +1,27 @@
 {
-	"extends": "astro/tsconfigs/base",
-	"compilerOptions": {
-		"baseUrl": ".",
-		"outDir": "dist",
-		"types": [
-			"astro/client"
-		],
-		"plugins": [
-			{
-				"name": "@astrojs/ts-plugin"
-			},
-		],
-		"paths": {
-			"@styles/*": [
-				"src/assets/styles/*"
-			],
-			"@images/*": [
-				"src/assets/images/*"
-			],
-			"@icons/*": [
-				"src/assets/icons/*"
-			],
-			"@assets/*": [
-				"src/assets/*"
-			],
-			"@common/*": [
-				"src/components/common/*"
-			],
-			"@widgets/*": [
-				"src/components/widgets/*"
-			],
-			"@components/*": [
-				"src/components/*"
-			],
-			"@content/*": [
-				"src/content/*"
-			],
-			"@layouts/*": [
-				"src/layouts/*"
-			],
-			"@hooks/*": [
-				"src/hooks/*"
-			],
-			"types/*": [
-				"src/types/*"
-			],
-			"@*": [
-				"src/*"
-			]
-		}
-	}
+  "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
+    "types": ["astro/client"],
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      }
+    ],
+    "paths": {
+      "@styles/*": ["src/assets/styles/*"],
+      "@images/*": ["src/assets/images/*"],
+      "@assets/*": ["src/assets/*"],
+      "@common/*": ["src/components/common/*"],
+      "@widgets/*": ["src/components/widgets/*"],
+      "@icons/*": ["src/components/icons/*"],
+      "@components/*": ["src/components/*"],
+      "@content/*": ["src/content/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "types/*": ["src/types/*"],
+      "@*": ["src/*"]
+    }
+  }
 }
