--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,14 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
-  "bracketSpacing": true,
-  "arrowParens": "always",
-  "endOfLine": "lf",
-  "jsxSingleQuote": true,
-  "printWidth": 180,
-  "quoteProps": "consistent",
-  "singleQuote": true,
-  "trailingComma": "none",
-  "tabWidth": 2
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "semi": true,
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "endOfLine": "lf",
+    "jsxSingleQuote": true,
+    "printWidth": 180,
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4
 }
