--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "sw-site",
-  "type": "module",
-  "exports": "./index.js",
-  "node": ">=22",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^4.2.3",
-    "@astrojs/partytown": "^2.1.4",
-    "@astrojs/react": "^4.2.3",
-    "@astrojs/sitemap": "^3.3.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
-    "@react-three/postprocessing": "^3.0.4",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.3",
-    "@types/react": "^19.1.0",
-    "@types/three": "^0.175.0",
-    "astro": "^5.6.1",
-    "astro-icon": "^1.1.5",
-    "motion": "^12.6.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.3",
-    "three": "^0.175.0",
-    "vite": "^6.2.5"
-  },
-  "devDependencies": {
-    "eslint": "^9.24.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11"
-  }
+    "name": "sw-site",
+    "type": "module",
+    "exports": "./index.js",
+    "node": ">=22",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "^4.2.3",
+        "@astrojs/partytown": "^2.1.4",
+        "@astrojs/react": "^4.2.3",
+        "@astrojs/sitemap": "^3.3.0",
+        "@fontsource/roboto": "^5.2.5",
+        "@react-three/drei": "^10.0.6",
+        "@react-three/fiber": "^9.1.2",
+        "@react-three/postprocessing": "^3.0.4",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "@tailwindcss/typography": "^0.5.16",
+        "@tailwindcss/vite": "^4.1.3",
+        "@types/react": "^19.1.1",
+        "@types/three": "^0.175.0",
+        "astro": "^5.6.1",
+        "astro-icon": "^1.1.5",
+        "astro-seo": "^0.8.4",
+        "clsx": "^2.1.1",
+        "motion": "^12.6.5",
+        "react": "workspace:*",
+        "react-dom": "workspace:*",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss": "^4.1.3",
+        "three": "^0.175.0",
+        "vite": "^6.2.6"
+    },
+    "devDependencies": {
+        "eslint": "^9.24.0",
+        "eslint-plugin-astro": "^1.3.1",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11"
+    }
 }
