--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/prettierrc",
-    "plugins": ["prettier-plugin-tailwindcss"],
+    "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-astro"],
     "semi": true,
     "bracketSpacing": true,
     "arrowParens": "always",
