--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -25,7 +25,6 @@
         "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.1.3",
-        "@types/react": "^19.1.1",
         "@types/three": "^0.175.0",
         "astro": "^5.6.1",
         "astro-icon": "^1.1.5",
@@ -40,10 +39,13 @@
         "vite": "^6.2.6"
     },
     "devDependencies": {
+        "@types/react": "^19.1.1",
+        "@types/react-dom": "19.0.4",
         "eslint": "^9.24.0",
         "eslint-plugin-astro": "^1.3.1",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "prettier": "^3.5.3",
+        "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.11"
     }
 }
