--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -1,10 +1,7 @@
 name: Deploy to Firebase
 
 on:
-  push:
-    branches: [main, dev]
-  pull_request:
-    branches: ['*']
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
