chore: update dependencies and improve migration setup

--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -15,30 +15,32 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/next": "3.31.0",
-    "@payloadcms/payload-cloud": "3.31.0",
-    "@payloadcms/richtext-lexical": "3.31.0",
+    "@libsql/client": "^0.15.4",
+    "@payloadcms/db-sqlite": "3.35.1",
+    "@payloadcms/next": "3.35.1",
+    "@payloadcms/payload-cloud": "3.35.1",
+    "@payloadcms/richtext-lexical": "3.35.1",
     "cross-env": "^7.0.3",
-    "graphql": "^16.8.1",
-    "next": "15.2.3",
-    "payload": "3.31.0",
-    "react": "workspace:*",
-    "react-dom": "workspace:*",
-    "sharp": "0.32.6",
-    "@payloadcms/db-sqlite": "3.31.0"
+    "graphql": "^16.10.0",
+    "libsql": "^0.5.6",
+    "next": "15.3.1",
+    "payload": "3.35.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sharp": "0.34.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^22.5.4",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "15.2.3",
-    "prettier": "^3.4.2",
-    "typescript": "5.7.3"
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^22.14.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.1",
+    "prettier": "^3.5.3",
+    "typescript": "5.8.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0",
+    "node": "^18.20.2 || >=20.9.0 || >=22",
     "pnpm": "^9 || ^10"
   }
 }
