--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -1,55 +1,60 @@
-# To use this Dockerfile, you have to set `output: 'standalone'` in your next.config.mjs file.
-# From https://github.com/vercel/next.js/blob/canary/examples/with-docker/Dockerfile
-
-FROM node:22.12.0-alpine AS base
+# syntax=docker.io/docker/dockerfile:1
+FROM node:22.14.0-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-# Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
-RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm i --frozen-lockfile; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+# ! TODO FIX THIS SHIT
+# Install pnpm directly instead of using corepack
+RUN npm install -g pnpm@10.8.1
 
+# Copy root workspace configuration
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+# Copy the CMS package.json
+COPY apps/cms/package.json ./apps/cms/
+# Copy any shared libs the CMS depends on
+COPY libs ./libs/
+
+# ! TODO FIX THIS SHIT
+# Install dependencies WITHOUT frozen-lockfile flag
+RUN pnpm install --filter=sw-site-cms...
 
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
+
+# ! TODO FIX THIS SHIT
+# Install pnpm directly instead of using corepack
+RUN npm install -g pnpm@10.8.1
+
+# Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/apps/cms/node_modules ./node_modules
+
+# Copy all project files
 COPY . .
 
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
+# Build the CMS app
+WORKDIR /app/apps/cms
+RUN pnpm build
 
-RUN \
-  if [ -f yarn.lock ]; then yarn run build; \
-  elif [ -f package-lock.json ]; then npm run build; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm run build; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
-
-# Production image, copy all the files and run next
+# Production image, copy all the files and run the app
 FROM base AS runner
-WORKDIR /app
+WORKDIR /opt/app
 
 ENV NODE_ENV production
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Remove this line if you do not have this folder
-COPY --from=builder /app/public ./public
+# Copy built app
+# COPY --from=builder /app/apps/cms/package.json ./
+# COPY --from=builder /app/apps/cms/node_modules ./node_modules
+# COPY --from=builder /app/apps/cms/.next ./
+# COPY --from=builder /app/apps/cms/public ./public
 
 # Set the correct permission for prerender cache
 RUN mkdir .next
@@ -57,15 +62,19 @@ RUN chown nextjs:nodejs .next
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+# COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+# COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# COPY --from=builder --chown=nextjs:nodejs /app/media ./media
+COPY --from=builder --chown=nextjs:nodejs /app/apps/cms/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/apps/cms/.next/static ./.next/static
+# COPY --from=builder --chown=nextjs:nodejs /app/apps/cms/media ./media
 
 USER nextjs
-
 EXPOSE 3000
-
-ENV PORT 3000
+ENV PORT=3000
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
-CMD HOSTNAME="0.0.0.0" node server.js
+ENV HOSTNAME="0.0.0.0"
+CMD ["node", "apps/cms/server.js"]
