--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -32,11 +32,12 @@
         "clsx": "^2.1.1",
         "marked": "^15.0.8",
         "motion": "^12.6.5",
-        "react": "workspace:*",
-        "react-dom": "workspace:*",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.3",
         "three": "^0.175.0",
+        "three-stdlib": "^2.35.15",
         "vite": "^6.2.6"
     },
     "devDependencies": {
