--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "devsafe": "rmdir /s /q .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
@@ -15,14 +15,12 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@libsql/client": "^0.15.4",
     "@payloadcms/db-sqlite": "3.35.1",
     "@payloadcms/next": "3.35.1",
     "@payloadcms/payload-cloud": "3.35.1",
     "@payloadcms/richtext-lexical": "3.35.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.10.0",
-    "libsql": "^0.5.6",
     "next": "15.3.1",
     "payload": "3.35.1",
     "react": "^19.1.0",
