Refactor theme toggle and related components

--- a/apps/site/src/content/projects/centra_engenharia.yaml
+++ b/apps/site/src/content/projects/centra_engenharia.yaml
@@ -4,9 +4,9 @@ summary: ''
 category: ''
 tags:
     - ''
-date: 'YYYY-MM'
+date: '2024-01'
 hero:
-    src: '/src/assets/images/projects/filtro_enade_2021/filtro_enade_2021_hero.png'
+    src: '/src/assets/images/projects/centra_engenharia/centra_engenharia_hero.png'
     title: ''
     altText: ''
 carousel: []
