--- a/apps/site/src/content/projects/jornada_vocacional_3.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_3.yaml
@@ -1,15 +1,21 @@
 title: 'Jornada Vocacional 3 - Expedição'
+draft: false
 subtitle: 'Experiência Interativa (Web)'
 summary: 'A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!'
-category: 'Web'
+categories:
+    - ''
 tags: []
+frameworks:
+    - ''
 date: '2021-10'
 hero:
     src: '/src/assets/images/projects/jornada_3/jornada_3_hero.png'
     title: 'Banner do projeto Jornada Vocacional 3'
     altText: 'Banner do projeto Jornada Vocacional 3'
-carousel: []
-partners: []
+# carousel:
+#     -
+# partners:
+#     -
 content: |
     # Jornada Vocacional - Expedição UNICEPLAC (3ª Edição)
 
