--- a/apps/site/src/content/projects/jornada_vocacional_2.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_2.yaml
@@ -1,15 +1,21 @@
 title: 'Jornada Vocacional 2 - A Batalha'
+draft: false
 subtitle: 'Experiência Interativa (Web)'
 summary: 'Na segunda edição da Jornada Vocacional Uniceplac, houveram diversas melhorias na interface e navegação, além de novos desafios, minigames e conteúdos.'
-category: 'Web'
+categories:
+    - ''
 tags: []
+frameworks:
+    - ''
 date: '2021-05'
 hero:
     src: '/src/assets/images/projects/jornada_2/jornada_2_hero.png'
     title: 'Banner do projeto Jornada Vocacional 2'
     altText: 'Banner do projeto Jornada Vocacional 2'
-carousel: []
-partners: []
+# carousel:
+#     -
+# partners:
+#     -
 content: |
     # Jornada Vocacional - A Batalha (2º Edição)
 
