--- a/apps/site/src/content/projects/trocando_saberes.yaml
+++ b/apps/site/src/content/projects/trocando_saberes.yaml
@@ -1,14 +1,17 @@
 title: 'Trocando Saberes'
+draft: false
 subtitle: ''
 summary: ''
-category: ''
+categories:
+    - ''
 tags:
+    - ''
+frameworks:
     - ''
 date: ''
 hero:
     src: '/src/assets/images/projects/filtro_enade_2021/filtro_enade_2021_hero.png'
     title: ''
     altText: ''
-carousel: []
-partners: []
+# s
 content: |
